src/test/deca/syntax/invalid/created/class/field_missing_indent_class.deca
// Description :
//    acces champs avec l'identificateur de classe manquant
//
// Resultats :
//		Syntaxe error

{
int a = .b();
}